--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -7,14 +7,18 @@ users:
   alisondy: U9CBCBLCV
   aravindputrevu: U1G27SDU6
   ashish-amarnath: U65JLLS0J
+  asmacdo: UNVH7RY9J
   briandealwis: UAZKM38JV
   bubblemelon: U7K9C643G
   calebamiles: U1ZDD4CUR
+  camilamacedo86: UJDM393EH
   carlisia: UBDSF40G2
   castrojo: U1W1Q6PRQ
   chrisshort: U2YGXSD9B
   cpanato: U8DFY4TTK
   dougm: U8GG20UE9
+  estroz: UKSEANEC9
+  fabianvf: UAJ3UH29F
   feiskyer: U0ASA4398
   gianarb: U0FSCELCR
   gsquared94: U0131C0PJBU
@@ -24,10 +28,14 @@ users:
   idvoretskyi: U0CBHE6GM
   ilya-zuyev: U018UF2G42F
   IsaacPD: U01B0C1R9NZ
+  jberkhahn: U7Q21LH2S
   jdumars: U0YJS6LHL
   jeefy: U5MCFK468
   jeremyrickard: U72ESU398
   jimangel: U4HSVFA5U
+  joelanford: U1R6NQD8W
+  jmccormick2001: UMPLV0G0H
+  jmrodri: U4KATPQ48
   johnbelamaric: U246A1A0N
   jonasrosland: U0A4G34S2
   justaugustus: U0E0E78AK
@@ -35,6 +43,7 @@ users:
   katharine: UBTBNJ6GL
   LappleApple: U011C07244F
   listx: UFCU8S8P3
+  marc-obrien: UL51BRL9Y
   markyjackson-taulia: U19TKJ64E
   MarlonGamez: U016N1XK06R
   mbbroberg: U18JTHMDY
@@ -51,6 +60,7 @@ users:
   phenixblue: UB4UVLEAK
   puerco: ULGHLJ7TP
   rajula96reddy: U7K9EK1HC
+  rashmigottipati: U013T1DD3PW
   Rin Oliver: USF4LMDCN
   sammy: U8NJFL023
   saschagrunert: U53SUDBD4
@@ -62,9 +72,11 @@ users:
   sumitranr: UCQN13L9H
   TaoBeier: UCLDV6MN1
   tejal29: UACD7R316
+  theishshah: U01891A4TRS
   tpepper: U6UB5V4TX
   tstromberg: UCSL5SJ8Z
   Tunde: UAY977ENN
+  varshaprasad96: UK59YP2DA
   Verolop: U7NNE57PU
   zubron: U7G0KNS86
   xmudrii: U4Q2TNGVD
