--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -335,6 +335,7 @@ channels:
   - name: sig-scalability
   - name: sig-scheduling
   - name: sig-security
+  - name: sig-security-tooling
   - name: sig-service-catalog
   - name: sig-testing
   - name: sig-ui
