--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -44,6 +44,7 @@ channels:
   - name: cluster-api-digitalocean
   - name: cluster-api-docker
     archived: true
+  - name: cluster-api-gcp
   - name: cluster-api-nested
   - name: cluster-api-openstack
   - name: cluster-api-packet
