Add odo-devs user group
**Which issue(s) this PR fixes**:

N/A

**Channel:**

`#odo`

**Request:**

We'd like to be able to have the ability for users to ping `odo-devs` in
the channel in order to contact maintainers.

I have gone through each user's GitHub / Slack ID and added it to
`users.yaml` and created a new users group.

Many thanks!

Signed-off-by: Charlie Drage <charlie@charliedrage.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -132,3 +132,18 @@ usergroups:
       - varshaprasad96
       - rashmigottipati
       - jberkhahn
+
+  - name: odo-devs
+    long_name: Odo Development Team
+    description: Active developers of odo on #odo
+    channels:
+      - odo
+    members:
+      - adisky
+      - cdrage
+      - dharmit
+      - girishramnani
+      - mohammedzee1000
+      - mik-dass
+      - prietyc123
+      - kadel
