Adding sig-security-docs channel

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -338,6 +338,7 @@ channels:
   - name: sig-scalability
   - name: sig-scheduling
   - name: sig-security
+  - name: sig-security-docs
   - name: sig-security-tooling
   - name: sig-service-catalog
   - name: sig-testing
