slack: archive wg-security-audit channel

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -401,6 +401,7 @@ channels:
   - name: wg-resource-mgmt
     archived: true
   - name: wg-security-audit
+    archived: true
   - name: wg-virtual-kubelet
     archived: true
   - name: windows-containerd
