slack: archive elk-charts channel
The channel was dedicated to the development of the ELK helm chart. The
original maintainers have discussion back to the main charts channel.

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -74,6 +74,7 @@ channels:
   - name: eks
   - name: elastickube
   - name: elk-charts
+    archived: true
   - name: emea-dev
   - name: emea-users
   - name: es-users
