--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2767,7 +2767,7 @@ workinggroups:
     time: "11:00"
     tz: PT (Pacific Time)
     frequency: biweekly
-    url: TODO
+    url: https://zoom.us/j/97964505804?pwd=R3hzSnArQWJHYmdWUnpSUDh3aXhFUT09
     archive_url: https://docs.google.com/document/d/1KF_kof3rBWzis87wMkwXicetREuutxlPI6dFDSqdWbo/edit
     recordings_url: TODO
   contact:
