--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -60,6 +60,7 @@ channels:
   - name: crash-diagnostics
   - name: crd-installation
   - name: crio
+  - name: crossplane
   - name: csi-secrets-store #this channel is for secrets-store-csi-driver which is a subproject of sig-auth
   - name: de-events
   - name: de-users
