SIG Docs chair transition

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1264,15 +1264,15 @@ sigs:
   label: docs
   leadership:
     chairs:
+    - github: irvifa
+      name: Irvi Aini
+      company: Traveloka
     - github: jimangel
       name: Jim Angel
       company: Google
     - github: kbarnard10
       name: Kaitlyn Barnard
       company: Kong
-    - github: zacharysarah
-      name: Zach Corleissen
-      company: Linux Foundation
     tech_leads:
     - github: kbhawkey
       name: Karen Bradshaw
@@ -1290,6 +1290,8 @@ sigs:
       name: Andrew Chen
     - github: jaredbhatti
       name: Jared Bhatti
+    - github: zacharysarah
+      name: Zach Corleissen
   meetings:
   - description: APAC SIG Meeting
     day: Wednesday
