chore: Change irvifa affiliation

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1266,7 +1266,7 @@ sigs:
     chairs:
     - github: irvifa
       name: Irvi Aini
-      company: Traveloka
+      company: Spotify
     - github: jimangel
       name: Jim Angel
       company: Google
