Add #image-builder channel (#5296)
* Add image builder channel

* fix order

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -117,6 +117,7 @@ channels:
   - name: id-events
   - name: id-users
   - name: il-users
+  - name: image-builder
   - name: in-dev
   - name: in-events
   - name: in-users
