Add kubeinit channel
This requests a new channel for kubeinit, which is an Ansible collection
designed to deploy multiple Kubernetes distributions on top of multiple
infrastructure platforms.

The tool also allows to easily create kubernetes clusters either using
kubeadm, openshift/okd, rancher or canonical kubernetes with the idea to
extend it to other kubernetes distributions and deployment tools,
hence the request to host it here.

Also this Ansible collection helps potential new users to understand
the different components required to deploy production ready clusters.

The project's repository is hosted at https://github.com/kubeinit/kubeinit

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -185,6 +185,7 @@ channels:
   - name: kubecon
   - name: kubectl-trace
   - name: kubedb
+  - name: kubeinit
   - name: kubekhan
     archived: true
   - name: kubeless
