Move sig-scale meetings to 10:30 PT
We decided that it'd be better than having the meeting time in UTC. Using UTC results in having the meeting at one time during half of the year and then at other time during another half. It makes hard as it requires re-organizing your calendar every 6 months. Using PT will keep the time the same for America. In Europe, we'll have two meetings at different time but we're fine with that.

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1858,8 +1858,8 @@ sigs:
   meetings:
   - description: Regular SIG Meeting
     day: Thursday
-    time: "17:30"
-    tz: UTC
+    time: "10:30"
+    tz: PT (Pacific Time)
     frequency: bi-weekly ([upcoming meeting dates](#upcoming-meeting-dates))
     url: https://zoom.us/j/94252896018?pwd=cTlMMlBoTHZqUEdjRm9VY2NWNUg5dz09
     archive_url: https://docs.google.com/a/bobsplanet.com/document/d/1hEpf25qifVWztaeZPFmjNiJvPo-5JX1z0LSvvVY5G2g/edit?usp=drive_web
