Add munnerz as a primary admin/approver

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -63,6 +63,7 @@ users:
   mkorbi: UEBLUUA0P
   mohammedzee1000: U3PFFE8CD
   mrbobbytables: U511ZSKHD
+  munnerz: U0EC03FTN
   nikhita: U2PQHGMLN
   nkubala: UA90QL2BE
   nrb: U7S597E00
