Add Dave Smith-Uchida to the Velero group
Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -51,6 +51,7 @@ usergroups:
     members:
       - ashish-amarnath
       - carlisia
+      - Dave Smith-Uchida
       - nrb
       - stephbman
       - zubron
