--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -18,6 +18,7 @@ users:
   cdrage: U2TU9NPH9
   chrisshort: U2YGXSD9B
   cpanato: U8DFY4TTK
+  Dave Smith-Uchida: UDZDED8G2
   dharmit: U0APPPEKE
   dougm: U8GG20UE9
   estroz: UKSEANEC9
