slack-config/sig-release: Update SIG leadership and Release Managers
Signed-off-by: Stephen Augustus <saugustus@vmware.com>

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -6,6 +6,7 @@ users:
   aleksandra-malinowska: U357LUPHS
   AlexB138: U3JA3MDGV
   alisondy: U9CBCBLCV
+  ameukam: U68KPQ448
   aravindputrevu: U1G27SDU6
   ashish-amarnath: U65JLLS0J
   asmacdo: UNVH7RY9J
