--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -18,6 +18,8 @@ users:
   castrojo: U1W1Q6PRQ
   cdrage: U2TU9NPH9
   chrisshort: U2YGXSD9B
+  cjcullen: U0ALJAVMF
+  cji: U5YSRC21J
   cpanato: U8DFY4TTK
   Dave Smith-Uchida: UDZDED8G2
   dharmit: U0APPPEKE
@@ -43,6 +45,7 @@ users:
   jmccormick2001: UMPLV0G0H
   jmrodri: U4KATPQ48
   johnbelamaric: U246A1A0N
+  joelsmith: U5SLG8T8F
   jonasrosland: U0A4G34S2
   justaugustus: U0E0E78AK
   kadel: U0DE6E8JY
@@ -50,10 +53,12 @@ users:
   katharine: UBTBNJ6GL
   LappleApple: U011C07244F
   listx: UFCU8S8P3
+  lukehinds: UN2P2M4F4
   marc-obrien: UL51BRL9Y
   markyjackson-taulia: U19TKJ64E
   MarlonGamez: U016N1XK06R
   mbbroberg: U18JTHMDY
+  micahhausler: U1WJ1BZA5
   mik-dass: U3PFFE8CD
   mkorbi: UEBLUUA0P
   mohammedzee1000: U3PFFE8CD
@@ -79,6 +84,8 @@ users:
   simplytunde: UAY1NBYHE
   Sujay Pillai: UBW3N1VGW
   sumitranr: UCQN13L9H
+  swamymsft: UHU7ZNXH8
+  tallclair: U64VCBURE
   TaoBeier: UCLDV6MN1
   tejal29: UACD7R316
   theishshah: U01891A4TRS
