--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -59,7 +59,7 @@ users:
   MarlonGamez: U016N1XK06R
   mbbroberg: U18JTHMDY
   micahhausler: U1WJ1BZA5
-  mik-dass: U3PFFE8CD
+  mik-dass: UCUULSG1W
   mkorbi: UEBLUUA0P
   mohammedzee1000: U3PFFE8CD
   mrbobbytables: U511ZSKHD
