New slack channel for Headlamp
Headlamp is an easy-to-use and extensible Kubernetes web UI.

https://github.com/kinvolk/headlamp

Headlamp was created to be a Kubernetes web UI that has the traditional
functionality of other web UIs/dashboards available (i.e. to list and
view resources) as well as other features.

It is available under the Apache 2.0 license.

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -105,6 +105,7 @@ channels:
   - name: gloo
   - name: grafana-operator
   - name: haproxy-ingress
+  - name: headlamp
   - name: helm-chart-testing
   - name: helm-deprecated
     archived: true
