New slack channel for open-cluster-management.
Signed-off-by: Mike Ng <mikeshngdev@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -278,6 +278,7 @@ channels:
   - name: office-hours
   - name: okteto
   - name: olm-dev
+  - name: open-cluster-mgmt
   - name: opencontainers
   - name: openebs
   - name: openebs-dev
