--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1677,6 +1677,13 @@ sigs:
     url: https://zoom.us/j/4799874685
     archive_url: https://docs.google.com/document/d/1Ne57gvidMEWXR70OxxnRkYquAoMpt56o75oZtg-OeBg/edit?usp=sharing
     recordings_url: https://www.youtube.com/watch?v=FbKOI9-x9hI&list=PL69nYSiGNLP1wJPj5DYWXjiArF-MJ5fNG
+  - description: Weekly CI Meeting
+    day: Monday
+    time: "10:00"
+    tz: PT (Pacific Time)
+    frequency: weekly
+    url: https://zoom.us/j/4799874685
+    archive_url: https://docs.google.com/document/d/1fb-ugvgdSVIkkuJ388_nhp2pBTy_4HEVg5848Xy7n5U/edit
   contact:
     slack: sig-node
     mailing_list: https://groups.google.com/forum/#!forum/kubernetes-sig-node
