sig-instrumentation: Update my company association

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1416,7 +1416,7 @@ sigs:
     tech_leads:
     - github: brancz
       name: Frederic Branczyk
-      company: Red Hat
+      company: Polar Signals
     - github: dashpole
       name: David Ashpole
       company: Google
