--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -345,9 +345,7 @@ channels:
   - name: sig-node-rkt
   - name: sig-scalability
   - name: sig-scheduling
-  - name: sig-security
-  - name: sig-security-docs
-  - name: sig-security-tooling
+  # sig-security* channels are defined in sig-security/
   - name: sig-service-catalog
   - name: sig-testing
   - name: sig-ui
