--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2016,10 +2016,10 @@ sigs:
     slack: sig-security
     mailing_list: https://groups.google.com/forum/#!forum/kubernetes-sig-security
     teams:
-      sig-security-leads:
-        description: SIG Security Leads
-      sig-security-pr-reviews:
-        description: SIG Security PR review notifications
+    - name: sig-security-leads
+      description: SIG Security Leads
+    - name: sig-security-pr-reviews
+      description: SIG Security PR review notifications
   subprojects:
   - name: security-audit
     description: Third Party Security Audit
