--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -32,6 +32,7 @@ users:
   gsquared94: U0131C0PJBU
   hasheddan: ULLQEF30C
   hoegaarden: U7VA4RZS9
+  iancoldwater: U9VL5SZPX
   idealhack: U5NJ3DQM9
   idvoretskyi: U0CBHE6GM
   ilya-zuyev: U018UF2G42F
@@ -86,6 +87,7 @@ users:
   Sujay Pillai: UBW3N1VGW
   sumitranr: UCQN13L9H
   swamymsft: UHU7ZNXH8
+  tabbysable: U01742MGBRT
   tallclair: U64VCBURE
   TaoBeier: UCLDV6MN1
   tejal29: UACD7R316
