--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -10,6 +10,7 @@ users:
   aravindputrevu: U1G27SDU6
   ashish-amarnath: U65JLLS0J
   asmacdo: UNVH7RY9J
+  bai: U4XAULHL3
   briandealwis: UAZKM38JV
   bubblemelon: U7K9C643G
   calebamiles: U1ZDD4CUR
@@ -52,6 +53,7 @@ users:
   kadel: U0DE6E8JY
   kaslin: U5ENKU0AE
   katharine: UBTBNJ6GL
+  kikisdeliveryservice: U9HFFRFT2
   LappleApple: U011C07244F
   listx: UFCU8S8P3
   lukehinds: UN2P2M4F4
