Request for keda-dev channel
Relates to https://github.com/kedacore/governance/issues/11

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -150,6 +150,7 @@ channels:
   - name: k8spin
   - name: kapitan
   - name: keda
+  - name: keda-dev
   - name: keel
   - name: kiam
   - name: kind
