--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -7,6 +7,7 @@ users:
   AlexB138: U3JA3MDGV
   alisondy: U9CBCBLCV
   ameukam: U68KPQ448
+  ankeesler: UBAA1KQ4A
   aravindputrevu: U1G27SDU6
   ashish-amarnath: U65JLLS0J
   asmacdo: UNVH7RY9J
@@ -18,6 +19,7 @@ users:
   carlisia: UBDSF40G2
   castrojo: U1W1Q6PRQ
   cdrage: U2TU9NPH9
+  cfryanr: U0188B6J42H
   chrisshort: U2YGXSD9B
   cjcullen: U0ALJAVMF
   cji: U5YSRC21J
@@ -25,6 +27,7 @@ users:
   Dave Smith-Uchida: UDZDED8G2
   dharmit: U0APPPEKE
   dougm: U8GG20UE9
+  enj: U2T4CVDTJ
   estroz: UKSEANEC9
   fabianvf: UAJ3UH29F
   feiskyer: U0ASA4398
@@ -58,10 +61,13 @@ users:
   listx: UFCU8S8P3
   lukehinds: UN2P2M4F4
   marc-obrien: UL51BRL9Y
+  margocrawf: U01FWP2K74J
   markyjackson-taulia: U19TKJ64E
   MarlonGamez: U016N1XK06R
+  mattmoyer: U0DRP8H42
   mbbroberg: U18JTHMDY
   micahhausler: U1WJ1BZA5
+  microwavables: UAF606ESE
   mik-dass: UCUULSG1W
   mkorbi: UEBLUUA0P
   mohammedzee1000: U3PFFE8CD
