--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1527,6 +1527,9 @@ sigs:
   - name: mutating-trace-admission-controller
     owners:
     - https://raw.githubusercontent.com/kubernetes-sigs/mutating-trace-admission-controller/master/OWNERS
+  - name: prometheus-adapter
+    owners:
+    - https://raw.githubusercontent.com/kubernetes-sigs/prometheus-adapter/master/OWNERS
 - dir: sig-multicluster
   name: Multicluster
   mission_statement: >
