Update YouTube admins

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -79,15 +79,11 @@ usergroups:
     channels:
       - sig-contribex
     members:
-      - alejandrox1
+      - alisondy
       - castrojo
-      - idealhack
-      - idvoretskyi
-      - jdumars
       - jeefy
       - markyjackson-taulia
       - mrbobbytables
-      - nzoueidi
       - onlydole
       - paris
 
