add grafana operator maintainer groups
Signed-off-by: Hubert Stefanski <hstefans@redhat.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -182,3 +182,17 @@ usergroups:
       - mrbobbytables
       - nikhita
       - paris
+      
+  - name: grafana-operator-maintainers
+      long_name: Grafana Operator Maintainers
+      description: Support group for Grafana Operator.
+      channels:
+        - grafana-operator
+      members:
+        - david-martin
+        - grdryn
+        - hubertstefanski
+        - pb82
+        - r-lawton
+        - vladimirmukhin
+        - wurbanski
