--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -26,6 +26,7 @@ users:
   cji: U5YSRC21J
   cpanato: U8DFY4TTK
   Dave Smith-Uchida: UDZDED8G2
+  david-martin: ULMJ41U73
   derekwaynecarr: U0A69N5GQ
   dharmit: U0APPPEKE
   dims: U0Y7A2MME
@@ -36,9 +37,11 @@ users:
   feiskyer: U0ASA4398
   gianarb: U0FSCELCR
   girishramnani: U9M4K75EU
+  grdryn: U017628HJL8
   gsquared94: U0131C0PJBU
   hasheddan: ULLQEF30C
   hoegaarden: U7VA4RZS9
+  hubertstefanski: U01941KQ2UT
   iancoldwater: U9VL5SZPX
   idealhack: U5NJ3DQM9
   idvoretskyi: U0CBHE6GM
@@ -85,10 +88,12 @@ users:
   pabloschuhmacher: U01AAGZ06KU
   palnabarun: UBH9NTMBM
   paris: U5SB22BBQ
+  pb82: U019M8295AQ
   pensu91: U44FHF81G
   phenixblue: UB4UVLEAK
   prietyc123: U01D4MBLM52
   puerco: ULGHLJ7TP
+  r-lawton: U019CNHR2E6
   rajula96reddy: U7K9EK1HC
   rashmigottipati: U013T1DD3PW
   Rin Oliver: USF4LMDCN
@@ -110,5 +115,7 @@ users:
   Tunde: UAY977ENN
   varshaprasad96: UK59YP2DA
   Verolop: U7NNE57PU
+  vladimirmukhin: UHVSCSD4G
+  wurbanski: URX7CMK97
   zubron: U7G0KNS86
   xmudrii: U4Q2TNGVD
