Add sig-contribex-meetings channel

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -336,6 +336,7 @@ channels:
   - name: sig-configuration
     archived: true
   - name: sig-contribex
+  - name: sig-contribex-meetings
   - name: sig-contribex-triage
     archived: true
   # sig-docs* channels are defined in sig-docs/
