typo in liaison name
Signed-off-by: Davanum Srinivas <davanum@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -59,7 +59,7 @@ sigs:
       description: Test Failures and Triage
     liaison:
       github: dims
-      name: Davanum Srinivass
+      name: Davanum Srinivas
   subprojects:
   - name: component-base
     owners:
