--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -194,5 +194,6 @@ usergroups:
         - hubertstefanski
         - pb82
         - r-lawton
+        - robshelly
         - vladimirmukhin
         - wurbanski
