--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -97,6 +97,7 @@ users:
   rajula96reddy: U7K9EK1HC
   rashmigottipati: U013T1DD3PW
   Rin Oliver: USF4LMDCN
+  robshelly: U01LL4P09SR
   sammy: U8NJFL023
   saschagrunert: U53SUDBD4
   savitharaghunathan: UC8U2V3BM
