Add Pablo to Pinniped user group
Signed-off-by: Monis Khan <mok@vmware.com>

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -78,6 +78,7 @@ users:
   nrb: U7S597E00
   nzoueidi: UBU72MWP2
   onlydole: U1DD4AZND
+  pabloschuhmacher: U01AAGZ06KU
   palnabarun: UBH9NTMBM
   paris: U5SB22BBQ
   pensu91: U44FHF81G
