sig-release: Add Lauri Apple as SIG Chair
Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1829,6 +1829,9 @@ sigs:
   label: release
   leadership:
     chairs:
+    - github: LappleApple
+      name: Lauri Apple
+      company: VMware
     - github: justaugustus
       name: Stephen Augustus
       company: Cisco
