Change company for saschagrunert
We now reference `Red Hat` instead of `SUSE` for `saschagrunert`.

Signed-off-by: Sascha Grunert <sgrunert@redhat.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1805,7 +1805,7 @@ sigs:
       company: VMware
     - github: saschagrunert
       name: Sascha Grunert
-      company: SUSE
+      company: Red Hat
     tech_leads:
     - github: hasheddan
       name: Daniel Mangum
