Add channel for openkruise project
Create a channel for better discussion around OpenKruise (a set of extended k8s workload controllers) and connect its maintainers with k8s community.

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -283,6 +283,7 @@ channels:
   - name: opencontainers
   - name: openebs
   - name: openebs-dev
+  - name: openkruise
   - name: openshift-dev
   - name: openshift-users
   - name: openstack-helm
